json: add missing vdsm start
Change-Id: I579a7569fb972d645feeec124d08f3c87a53d47e
Signed-off-by: Yeela Kaplan <ykaplan@redhat.com>

--- a/vdsm_functional/init.json.in
+++ b/vdsm_functional/init.json.in
@@ -21,6 +21,7 @@
                     "@SUITE@/deploy-scripts/add_local_repo.sh",
                     "@SUITE@/deploy-scripts/setup_host.sh",
                     "@SUITE@/deploy-scripts/setup_vdsm_tests.sh",
+                    "@SUITE@/deploy-scripts/start_vdsm.sh",
                     "@SUITE@/deploy-scripts/bz_1195882_libvirt_workaround.sh"
                 ]
             }
@@ -72,6 +73,7 @@
                     "@SUITE@/deploy-scripts/add_local_repo.sh",
                     "@SUITE@/deploy-scripts/setup_host.sh",
                     "@SUITE@/deploy-scripts/setup_vdsm_tests.sh",
+                    "@SUITE@/deploy-scripts/start_vdsm.sh",
                     "@SUITE@/deploy-scripts/bz_1195882_libvirt_workaround.sh"
                 ]
             }
