updating tests to match rename in the framework
Change-Id: I81c257a7339434a52807ee47ab0c174b7115c7ae
Signed-off-by: Max Kovgan <mvk@redhat.com>
Bug-URL: https://projects.engineering.redhat.com/browse/RHEVINTEG-1315

--- a/vdsm_functional/init.json.in
+++ b/vdsm_functional/init.json.in
@@ -3,7 +3,7 @@
         "host-el7": {
             "nics": [
                 {
-                    "net": "testenv"
+                    "net": "lago"
                 }
             ], 
             "disks": [
@@ -29,7 +29,7 @@
         "host-fc21": {
             "nics": [
                 {
-                    "net": "testenv"
+                    "net": "lago"
                 }
             ],
             "disks": [
@@ -55,7 +55,7 @@
         "host-fc22": {
             "nics": [
                 {
-                    "net": "testenv"
+                    "net": "lago"
                 }
             ],
             "disks": [
@@ -81,7 +81,7 @@
 
     }, 
     "nets": {
-        "testenv": {
+        "lago": {
             "type": "nat",
             "dhcp": {
                 "start": 100, 
