Added 3.5 tests as they are now on lago rpm
* Some modifications are needed, as the answerfiles paths and such
* Left the old tests there, probably to be used for master version

Bug-Url: https://bugzilla.redhat.com/show_bug.cgi?id=1277649
Change-Id: I793660b2f8a6a2569f23f238c1fb70e4847370d8
Signed-off-by: David Caro <dcaroest@redhat.com>

--- a/common/answer-files/el7_master.conf
+++ b/common/answer-files/el7_master.conf
@@ -38,3 +38,4 @@ OVESETUP_APACHE/configureSsl=bool:True
 OVESETUP_CONFIG/websocketProxyConfig=bool:True
 OVESETUP_ENGINE_CONFIG/fqdn=str:engine
 OVESETUP_CONFIG/sanWipeAfterDelete=bool:False
+OVESETUP_VMCONSOLE_PROXY_CONFIG/vmconsoleProxyConfig=bool:False
