--- a/common/answer-files/el6_master.conf
+++ b/common/answer-files/el6_master.conf
@@ -37,3 +37,4 @@ OVESETUP_APACHE/configureRootRedirection=bool:True
 OVESETUP_APACHE/configureSsl=bool:True
 OVESETUP_CONFIG/websocketProxyConfig=bool:True
 OVESETUP_CONFIG/sanWipeAfterDelete=bool:False
+OVESETUP_VMCONSOLE_PROXY_CONFIG/vmconsoleProxyConfig=bool:False
