--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,7 @@
 basic_suite/init.json
 basic_suite_3.5/init.json
 basic_suite_3.6/init.json
+basic_suite_master/init.json
 deployment-basic_suite_3.5
 deployment-basic_suite_3.6
+deployment-basic_suite_master
