Ignore generated files
Adds following to .gitignore:

  basic_suite_*/init.json
  deployment_basic_suite_*

Change-Id: I973c70407eacb88c5ec6c23fbd4ca282be72dcd3
Signed-off-by: Martin Perina <mperina@redhat.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 *.pyc
 .*.swp
 basic_suite/init.json
+basic_suite_3.5/init.json
+basic_suite_3.6/init.json
+deployment-basic_suite_3.5
+deployment-basic_suite_3.6
