--- a/common/answer-files/el7_master.conf
+++ b/common/answer-files/el7_master.conf
@@ -13,7 +13,7 @@ OVESETUP_CONFIG/remoteEngineHostSshPort=none:None
 OVESETUP_CONFIG/fqdn=str:engine
 OVESETUP_CONFIG/storageType=none:None
 OSETUP_RPMDISTRO/requireRollback=none:None
-OSETUP_RPMDISTRO/enableUpgrade=none:None
+OSETUP_RPMDISTRO/enableUpgrade=bool:True
 OVESETUP_DB/database=str:engine
 OVESETUP_DB/fixDbViolations=none:None
 OVESETUP_DB/secured=bool:False
