Fixed answerfile for master
A new question was added to the setup

Change-Id: I6be958a70d67126d8067ff1855018125623b10c1

--- a/common/answer-files/el7_master.conf
+++ b/common/answer-files/el7_master.conf
@@ -39,3 +39,19 @@ OVESETUP_CONFIG/websocketProxyConfig=bool:True
 OVESETUP_ENGINE_CONFIG/fqdn=str:engine
 OVESETUP_CONFIG/sanWipeAfterDelete=bool:False
 OVESETUP_VMCONSOLE_PROXY_CONFIG/vmconsoleProxyConfig=bool:False
+OVESETUP_DWH_CORE/enable=bool:True
+OVESETUP_DWH_CONFIG/dwhDbBackupDir=str:/var/lib/ovirt-engine-dwh/backups
+OVESETUP_DWH_DB/database=str:ovirt_engine_history
+OVESETUP_DWH_DB/disconnectExistingDwh=none:None
+OVESETUP_DWH_DB/dumper=str:pg_custom
+OVESETUP_DWH_DB/filter=none:None
+OVESETUP_DWH_DB/host=str:localhost
+OVESETUP_DWH_DB/password=str:uf5vskEpdSeflQnwAdp4ZO
+OVESETUP_DWH_DB/performBackup=none:None
+OVESETUP_DWH_DB/port=int:5432
+OVESETUP_DWH_DB/restoreBackupLate=bool:True
+OVESETUP_DWH_DB/restoreJobs=int:2
+OVESETUP_DWH_DB/secured=bool:False
+OVESETUP_DWH_DB/securedHostValidation=bool:False
+OVESETUP_DWH_DB/user=str:ovirt_engine_history
+OVESETUP_DWH_PROVISIONING/postgresProvisioningEnabled=bool:True
