Avoiding the install of deltarpm in the engine appliance
Change-Id: I7587ee7b6346c5d1e59a689388036d17bac28b5d
Signed-off-by: Tolik Litovsky <tlitovsk@redhat.com>

--- a/image_ng_suite_3.6/init.json.in
+++ b/image_ng_suite_3.6/init.json.in
@@ -25,7 +25,7 @@
                 "ovirt-engine-password": "123",
                 "ovirt-role": "engine",
                 "deploy-scripts": [
-                    "../common/deploy-scripts/setup_engine.sh"
+                    "@SUITE@/deploy-scripts/setup_engine.sh"
                 ]
             }
         },
