Using relative script paths
This is a first step towards removing the need for templates, and
properly adapts the initfiles to the next lago release

Also using lago unstable, as the release would break other projects,
will return back to stable once the other projects have adapted

Change-Id: Ida0fc3f2137c7454e1d44e5878269b7230f87a20
Signed-off-by: David Caro <dcaroest@redhat.com>

--- a/image_ng_suite_3.6/init.json.in
+++ b/image_ng_suite_3.6/init.json.in
@@ -1,7 +1,7 @@
 {
     "domains": {
         "engine": {
-	        "nics": [
+            "nics": [
                 {
                     "net": "lago",
                     "ip": "192,168.200.3"
@@ -25,7 +25,7 @@
                 "ovirt-engine-password": "123",
                 "ovirt-role": "engine",
                 "deploy-scripts": [
-                    "@SUITE@/deploy-scripts/setup_engine.sh"
+                    "$LAGO_INITFILE_PATH/../common/deploy-scripts/setup_engine_image_ng.sh"
                 ]
             }
         },
@@ -54,7 +54,7 @@
             ],
             "metadata": {
                 "deploy-scripts": [
-                    "../common/deploy-scripts/setup_storage_iscsi_el7.sh"
+                    "$LAGO_INITFILE_PATH/../common/deploy-scripts/setup_storage_iscsi_el7.sh"
                 ]
             }
         },
@@ -91,7 +91,7 @@
             ],
             "metadata": {
                 "deploy-scripts": [
-                    "../common/deploy-scripts/setup_storage_nfs_el7.sh"
+                    "$LAGO_INITFILE_PATH/../common/deploy-scripts/setup_storage_nfs_el7.sh"
                 ]
             }
         },
