--- a/common/answer-files/el7_master.conf
+++ b/common/answer-files/el7_master.conf
@@ -55,3 +55,4 @@ OVESETUP_DWH_DB/secured=bool:False
 OVESETUP_DWH_DB/securedHostValidation=bool:False
 OVESETUP_DWH_DB/user=str:ovirt_engine_history
 OVESETUP_DWH_PROVISIONING/postgresProvisioningEnabled=bool:True
+OVESETUP_DWH_CONFIG/scale=str:1
