Add IDE files to .gitignore
Change-Id: I988509eb2e351256fc22d469374209a395551edc
Signed-off-by: Roy Golan <rgolan@redhat.com>

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,16 @@ basic_suite_master/init.json
 deployment-basic_suite_3.5
 deployment-basic_suite_3.6
 deployment-basic_suite_master
+
+#IDE files
+##########
+.settings
+.project
+.factorypath
+.externalToolBuilders
+.pmd
+*.ipr
+*.iml
+.idea
+.pydevproject
+
