Move IPA tests to 389ds
Since IPA has lot of dependencies and it takes time to install them, we
are moving IPA tests to 389ds to improve permormance.

Change-Id: Id474522bd0552432e8deb730b994bb7397f2b46c
Bug-Url: https://bugzilla.redhat.com/show_bug.cgi?id=1356557
Signed-off-by: Ondra Machacek <omachace@redhat.com>

--- a/common/answer-files/aaa_ldap_4.0.conf
+++ b/common/answer-files/aaa_ldap_4.0.conf
@@ -1,12 +1,12 @@
 [environment:default]
-OVAAALDAP_LDAP/profile=str:ipa
+OVAAALDAP_LDAP/profile=str:389ds
 OVAAALDAP_LDAP/useDNS=bool:False
 OVAAALDAP_LDAP/aaaProfileName=str:lago.local
 OVAAALDAP_LDAP/serverset=str:single
 OVAAALDAP_LDAP/protocol=str:plain
-OVAAALDAP_LDAP/hosts=str:@IPA_IP@
-OVAAALDAP_LDAP/user=str:uid=admin,cn=users,cn=accounts,dc=lago,dc=local
-OVAAALDAP_LDAP/password=str:12345678
+OVAAALDAP_LDAP/hosts=str:@389DS_IP@
+OVAAALDAP_LDAP/user=str:uid=user1,ou=People,dc=lago,dc=local
+OVAAALDAP_LDAP/password=str:123456
 OVAAALDAP_LDAP/toolEnable=bool:False
 OVAAALDAP_LDAP/configOverwrite=bool:True
 OVAAALDAP_LDAP/useVmSso=bool:False
