--- a/common/answer-files/aaa_ldap_master.conf
+++ b/common/answer-files/aaa_ldap_master.conf
@@ -1,12 +1,12 @@
 [environment:default]
-OVAAALDAP_LDAP/profile=str:ipa
+OVAAALDAP_LDAP/profile=str:389ds
 OVAAALDAP_LDAP/useDNS=bool:False
 OVAAALDAP_LDAP/aaaProfileName=str:lago.local
 OVAAALDAP_LDAP/serverset=str:single
 OVAAALDAP_LDAP/protocol=str:plain
-OVAAALDAP_LDAP/hosts=str:@IPA_IP@
-OVAAALDAP_LDAP/user=str:uid=admin,cn=users,cn=accounts,dc=lago,dc=local
-OVAAALDAP_LDAP/password=str:12345678
+OVAAALDAP_LDAP/hosts=str:@389DS_IP@
+OVAAALDAP_LDAP/user=str:uid=user1,ou=People,dc=lago,dc=local
+OVAAALDAP_LDAP/password=str:123456
 OVAAALDAP_LDAP/toolEnable=bool:False
 OVAAALDAP_LDAP/configOverwrite=bool:True
 OVAAALDAP_LDAP/useVmSso=bool:False
