Disabled image-io-proxy in engine setup.
Change-Id: Icc812ac7eb2616f0c13fa4e07a886ebfcf2f1215
Signed-off-by: gbenhaim <galbh2@gmail.com>

--- a/common/answer-files/el7_master.conf
+++ b/common/answer-files/el7_master.conf
@@ -56,3 +56,4 @@ OVESETUP_DWH_DB/securedHostValidation=bool:False
 OVESETUP_DWH_DB/user=str:ovirt_engine_history
 OVESETUP_DWH_PROVISIONING/postgresProvisioningEnabled=bool:True
 OVESETUP_DWH_CONFIG/scale=str:1
+OVESETUP_CONFIG/imageioProxyConfig=bool:False
