--- a/common/init-configs/1_centos6_engine_2_centos7_hosts.yml
+++ b/common/init-configs/1_centos6_engine_2_centos7_hosts.yml
@@ -1,5 +1,6 @@
 domains:
   engine:
+    vm-type: ovirt-engine
     memory: 4096
     nics:
       - net: lago
@@ -11,13 +12,13 @@ domains:
         format: qcow2
     metadata:
       ovirt-engine-password: 123
-      ovirt-role: engine
       deploy-scripts:
         - $LAGO_INITFILE_PATH/../common/deploy-scripts/add_local_repo.sh
         - $LAGO_INITFILE_PATH/../common/deploy-scripts/setup_engine.sh
 
   storage:
-    memory: 2047
+    memory: 512
+    cpus: 1
     nics:
       - net: lago
     disks:
@@ -50,6 +51,7 @@ domains:
         - $LAGO_INITFILE_PATH/../common/deploy-scripts/setup_storage_unified_el7.sh
 
   host1:
+    vm-type: ovirt-host
     memory: 2047
     nics:
       - net: lago
@@ -60,7 +62,6 @@ domains:
         dev: vda
         format: qcow2
     metadata:
-      ovirt-role: host
       ovirt-capabilities:
         - snapshot-live-merge
       deploy-scripts:
@@ -68,6 +69,7 @@ domains:
         - $LAGO_INITFILE_PATH/../common/deploy-scripts/setup_host_el7.sh
 
   host0:
+    vm-type: ovirt-host
     memory: 2047
     nics:
       - net: lago
@@ -78,7 +80,6 @@ domains:
         dev: vda
         format: qcow2
     metadata:
-      ovirt-role: host
       ovirt-capabilities:
         - snapshot-live-merge
       deploy-scripts:
