--- a/common/init-configs/1_centos7_engine_2_centos7_hosts.yml
+++ b/common/init-configs/1_centos7_engine_2_centos7_hosts.yml
@@ -14,28 +14,28 @@ domains:
         size: 101G
         type: empty
         name: nfs
-        dev: vdb
-        format: qcow2
+        dev: sda
+        format: raw
       - comment: Not used yet, for future export domain tests
         size: 20G
         type: empty
         name: export
-        dev: vdc
-        format: qcow2
+        dev: sdb
+        format: raw
       - comment: Main iSCSI device
         size: 101G
         type: empty
         name: iscsi
-        dev: vdd
-        format: qcow2
+        dev: sdc
+        format: raw
     metadata:
       ovirt-engine-password: 123
       deploy-scripts:
         - $LAGO_INITFILE_PATH/../common/deploy-scripts/add_local_repo.sh
         - $LAGO_INITFILE_PATH/../common/deploy-scripts/setup_storage_unified_el7.sh
         - $LAGO_INITFILE_PATH/../common/deploy-scripts/setup_engine.sh
-  
-  host1:
+
+  host0:
     vm-type: ovirt-host
     memory: 2047
     nics:
@@ -53,7 +53,7 @@ domains:
         - $LAGO_INITFILE_PATH/../common/deploy-scripts/add_local_repo.sh
         - $LAGO_INITFILE_PATH/../common/deploy-scripts/setup_host_el7.sh
 
-  host0:
+  host1:
     vm-type: ovirt-host
     memory: 2047
     nics:
