--- a/he-basic-suite-4.0/answers.conf.in
+++ b/he-basic-suite-4.0/answers.conf.in
@@ -2,24 +2,22 @@
 OVEHOSTED_CORE/screenProceed=bool:True
 OVEHOSTED_CORE/deployProceed=bool:True
 OVEHOSTED_CORE/confirmSettings=bool:True
-OVEHOSTED_CORE/isAdditionalHost=bool:True
 OVEHOSTED_CORE/skipTTYCheck=bool:True
 OVEHOSTED_NETWORK/fqdn=str:hosted-engine.lago.local
 OVEHOSTED_NETWORK/bridgeName=str:ovirtmgmt
+OVEHOSTED_NETWORK/bridgeIf=str:eth0
 OVEHOSTED_NETWORK/firewallManager=str:iptables
 OVEHOSTED_NETWORK/gateway=str:@GW@
-OVEHOSTED_NETWORK/host_name=str:@HOSTNAME@
 OVEHOSTED_ENGINE/insecureSSL=none:None
 OVEHOSTED_ENGINE/clusterName=str:Default
 OVEHOSTED_ENGINE/adminPassword=str:@ENGINEPASS@
-OVEHOSTED_ENGINE/appHostName=str:@APPHOSTNAME@
+OVEHOSTED_ENGINE/appHostName=str:lago-he-basic-suite-4-0-host0
+OVEHOSTED_ENGINE/engineSetupTimeout=str:1200
 OVEHOSTED_STORAGE/storageDatacenterName=str:hosted_datacenter
 OVEHOSTED_STORAGE/domainType=str:nfs3
 OVEHOSTED_STORAGE/glusterBrick=none:None
 OVEHOSTED_STORAGE/LunID=none:None
 OVEHOSTED_STORAGE/imgSizeGB=int:10
-OVEHOSTED_STORAGE/hostID=int:@HOSTID@
-OVEHOSTED_STORAGE/mntOptions=none:None
 OVEHOSTED_STORAGE/iSCSIPortalIPAddress=none:None
 OVEHOSTED_STORAGE/iSCSITargetName=none:None
 OVEHOSTED_STORAGE/glusterProvisionedShareName=str:hosted_engine_glusterfs
@@ -28,7 +26,7 @@ OVEHOSTED_STORAGE/storageDomainName=str:hosted_storage
 OVEHOSTED_STORAGE/glusterProvisioningEnabled=bool:False
 OVEHOSTED_STORAGE/iSCSIPortal=none:None
 OVEHOSTED_STORAGE/vgUUID=none:None
-OVEHOSTED_STORAGE/storageDomainConnection=str:lago_he_basic_suite_4_0_storage:/exports/nfs_he
+OVEHOSTED_STORAGE/storageDomainConnection=str:lago-he-basic-suite-4-0-storage:/exports/nfs_he
 OVEHOSTED_STORAGE/iSCSIPortalUser=none:None
 OVEHOSTED_VDSM/consoleType=str:vnc
 OVEHOSTED_VM/vmMemSizeMB=int:3171
@@ -36,7 +34,7 @@ OVEHOSTED_VM/vmMACAddr=str:00:16:3e:24:d3:63
 OVEHOSTED_VM/emulatedMachine=str:pc
 OVEHOSTED_VM/vmBoot=str:disk
 OVEHOSTED_VM/vmVCpus=str:2
-OVEHOSTED_VM/ovfArchive=none:None
+OVEHOSTED_VM/ovfArchive=str:@OVAIMAGE@
 OVEHOSTED_VM/vmCDRom=none:None
 OVEHOSTED_VM/automateVMShutdown=bool:True
 OVEHOSTED_VM/cloudinitInstanceDomainName=str:lago.local
@@ -44,6 +42,7 @@ OVEHOSTED_VM/cloudinitExecuteEngineSetup=bool:True
 OVEHOSTED_VM/cloudinitInstanceHostName=str:hosted-engine.lago.local
 OVEHOSTED_VM/cloudinitVMStaticCIDR=str:@ADDR@/24
 OVEHOSTED_VM/cloudInitISO=str:generate
+OVEHOSTED_VM/cloudinitRootPwd=str:@VMPASS@
 OVEHOSTED_VM/cloudinitVMETCHOSTS=bool:True
 OVEHOSTED_VM/cloudinitVMDNS=str:@GW@
 OVEHOSTED_VDSM/spicePkiSubject=str:C=EN, L=Test, O=Test, CN=Test
