Simplify variable replacement in control.sh.
Change-Id: I67655a9f4d7feb8adc03603bd568bb0df42fc8c6
Signed-off-by: Ondřej Svoboda <osvoboda@redhat.com>

--- a/common/init-configs/1_centos6_engine_2_centos7_hosts.yml
+++ b/common/init-configs/1_centos6_engine_2_centos7_hosts.yml
@@ -1,9 +1,9 @@
 domains:
-  engine:
+  __ENGINE__:
     vm-type: ovirt-engine
     memory: 4096
     nics:
-      - net: lago
+      - net: __LAGO_NET__
     disks:
       - template_name: el6-base
         type: template
@@ -16,11 +16,11 @@ domains:
         - $LAGO_INITFILE_PATH/../common/deploy-scripts/add_local_repo.sh
         - $LAGO_INITFILE_PATH/../common/deploy-scripts/setup_engine.sh
 
-  storage:
+  __STORAGE__:
     memory: 512
     cpus: 1
     nics:
-      - net: lago
+      - net: __LAGO_NET__
     disks:
       - template_name: el7-base
         type: template
@@ -50,11 +50,11 @@ domains:
         - $LAGO_INITFILE_PATH/../common/deploy-scripts/add_local_repo.sh
         - $LAGO_INITFILE_PATH/../common/deploy-scripts/setup_storage_unified_el7.sh
 
-  host1:
+  __HOST1__:
     vm-type: ovirt-host
     memory: 2047
     nics:
-      - net: lago
+      - net: __LAGO_NET__
     disks:
       - template_name: el7-base
         type: template
@@ -68,11 +68,11 @@ domains:
         - $LAGO_INITFILE_PATH/../common/deploy-scripts/add_local_repo.sh
         - $LAGO_INITFILE_PATH/../common/deploy-scripts/setup_host_el7.sh
 
-  host0:
+  __HOST0__:
     vm-type: ovirt-host
     memory: 2047
     nics:
-      - net: lago
+      - net: __LAGO_NET__
     disks:
       - template_name: el7-base
         type: template
@@ -87,7 +87,7 @@ domains:
         - $LAGO_INITFILE_PATH/../common/deploy-scripts/setup_host_el7.sh
 
 nets:
-  lago:
+  __LAGO_NET__:
     type: nat
     dhcp:
       start: 100
