--- a/common/init-configs/1_hosted_engine_2_centos7_hosts.yml
+++ b/common/init-configs/1_hosted_engine_2_centos7_hosts.yml
@@ -1,19 +1,19 @@
 domains:
-  engine:
+  __ENGINE__:
     vm-provider: ssh
     vm-type: ovirt-engine
     distro: el7
     nics:
-      - net: lago
+      - net: __LAGO_NET__
         ip: 192.168.200.99
     metadata:
       ovirt-engine-password: 123
 
-  storage:
+  __STORAGE__:
     memory: 1047
     distro: el7
     nics:
-      - net: lago
+      - net: __LAGO_NET__
     disks:
       - template_name: el7-base
         type: template
@@ -50,12 +50,12 @@ domains:
         - $LAGO_INITFILE_PATH/../common/deploy-scripts/setup_storage_unified_el7.sh
         - $LAGO_INITFILE_PATH/../common/deploy-scripts/setup_storage_unified_he_extra_el7.sh
 
-  host1:
+  __HOST1__:
     vm-type: ovirt-host
     distro: el7
     memory: 4720
     nics:
-      - net: lago
+      - net: __LAGO_NET__
     disks:
       - template_name: el7-base
         type: template
@@ -76,12 +76,12 @@ domains:
         - $LAGO_INITFILE_PATH/../common/deploy-scripts/setup_host_el7.sh
         - $LAGO_INITFILE_PATH/../common/deploy-scripts/install_he.sh
 
-  host0:
+  __HOST0__:
     vm-type: ovirt-host
     distro: el7
     memory: 4720
     nics:
-      - net: lago
+      - net: __LAGO_NET__
     disks:
       - template_name: el7-base
         type: template
@@ -103,7 +103,7 @@ domains:
         - $LAGO_INITFILE_PATH/../common/deploy-scripts/install_he.sh
 
 nets:
-  lago:
+  __LAGO_NET__:
     type: nat
     dhcp:
       start: 100
