Add multiple interfaces to basic-suite-4.0/master.
Virt hosts now have four interfaces (management, storage, 2x bonding),
which become members of three separate /24 subnets. The interfaces
intended for bonding join the same network.

The engine node joins the storage network in addition to the management
network because it also serves as storage.

Hosted Engine suites (and 3.6) will follow later.

Change-Id: I69a6c57c2bdf4d966ca6e4f646c6a615634ff1be
Signed-off-by: Ondřej Svoboda <osvoboda@redhat.com>

--- a/common/init-configs/1_centos6_engine_2_centos7_hosts.yml
+++ b/common/init-configs/1_centos6_engine_2_centos7_hosts.yml
@@ -3,7 +3,7 @@ domains:
     vm-type: ovirt-engine
     memory: 4096
     nics:
-      - net: __LAGO_NET__
+      - net: __LAGO_NET_MANAGEMENT__
     disks:
       - template_name: el6-base
         type: template
@@ -21,7 +21,7 @@ domains:
     cpus: 1
     service_provider: systemd
     nics:
-      - net: __LAGO_NET__
+      - net: __LAGO_NET_MANAGEMENT__
     disks:
       - template_name: el7-base
         type: template
@@ -57,7 +57,7 @@ domains:
     service_provider: systemd
     root-password: 123456
     nics:
-      - net: __LAGO_NET__
+      - net: __LAGO_NET_MANAGEMENT__
     disks:
       - template_name: el7-base
         type: template
@@ -77,7 +77,7 @@ domains:
     service_provider: systemd
     root-password: 123456
     nics:
-      - net: __LAGO_NET__
+      - net: __LAGO_NET_MANAGEMENT__
     disks:
       - template_name: el7-base
         type: template
@@ -92,7 +92,7 @@ domains:
         - $LAGO_INITFILE_PATH/../common/deploy-scripts/setup_host_el7.sh
 
 nets:
-  __LAGO_NET__:
+  __LAGO_NET_MANAGEMENT__:
     type: nat
     dhcp:
       start: 100
