Updated .gitignore file
Ignoring the following file and dirs:

1. All dirs statring with 'deployment-'
   (those are the lago prefixes).
2. Tests and mock logs.
3. Auto generated mock configs.
4. LagoInitFile - which being created from a template
   when running a test.

Change-Id: I2594c1674fa659f76db315c5579ec09f536d849e
Signed-off-by: gbenhaim <galbh2@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,11 @@
 *.pyc
 .*.swp
-basic_suite/init.json
-basic_suite_3.5/init.json
-basic_suite_3.6/init.json
-basic_suite_master/init.json
-deployment-basic_suite_3.5
-deployment-basic_suite_3.6
-deployment-basic_suite_master
+.bash_history
+deployment-*
+**/LagoInitFile
+logs*
+test_logs/
+mocker-*
 
 #IDE files
 ##########
