Fixes for HE suite
1. rm yum leftovers
2. define the storage VM with a single CPU
3. Use DNS domain name, not hard-coded DNS
4. Replace - with _ in VM names
5. Simplify control.sh for better readability. Check for errors in deployment.
6. Bring setup_first and setup_additional scripts more closely together. They are quite similar now.
7. Verify Engine is up and running before 2nd host deployment
8. Fix Glance tests - match with master code

With all above fixes, I can get the suite running in <30 minutes on my 8GB laptop.

Change-Id: I2a6b98cad7eca78cf17f4a5675f05e6ab3429b93
Signed-off-by: Yaniv Kaul <ykaul@redhat.com>

--- a/he-basic-suite-4.0/answers-additional.conf.in
+++ b/he-basic-suite-4.0/answers-additional.conf.in
@@ -4,15 +4,15 @@ OVEHOSTED_CORE/deployProceed=bool:True
 OVEHOSTED_CORE/confirmSettings=bool:True
 OVEHOSTED_CORE/isAdditionalHost=bool:True
 OVEHOSTED_CORE/skipTTYCheck=bool:True
-OVEHOSTED_NETWORK/fqdn=str:hosted-engine.lago.local
+OVEHOSTED_NETWORK/fqdn=str:@HOSTEDENGINE@.@DOMAIN@
 OVEHOSTED_NETWORK/bridgeName=str:ovirtmgmt
 OVEHOSTED_NETWORK/firewallManager=str:iptables
 OVEHOSTED_NETWORK/gateway=str:@GW@
-OVEHOSTED_NETWORK/host_name=str:@HOSTNAME@
+OVEHOSTED_NETWORK/host_name=str:@MYHOSTNAME@.@DOMAIN@
 OVEHOSTED_ENGINE/insecureSSL=none:None
 OVEHOSTED_ENGINE/clusterName=str:Default
 OVEHOSTED_ENGINE/adminPassword=str:@ENGINEPASS@
-OVEHOSTED_ENGINE/appHostName=str:@APPHOSTNAME@
+OVEHOSTED_ENGINE/appHostName=str:@MYHOSTNAME@
 OVEHOSTED_STORAGE/storageDatacenterName=str:hosted_datacenter
 OVEHOSTED_STORAGE/domainType=str:nfs3
 OVEHOSTED_STORAGE/glusterBrick=none:None
@@ -32,16 +32,16 @@ OVEHOSTED_STORAGE/storageDomainConnection=str:lago-he-basic-suite-4-0-storage:/e
 OVEHOSTED_STORAGE/iSCSIPortalUser=none:None
 OVEHOSTED_VDSM/consoleType=str:vnc
 OVEHOSTED_VM/vmMemSizeMB=int:3171
-OVEHOSTED_VM/vmMACAddr=str:00:16:3e:24:d3:63
+OVEHOSTED_VM/vmMACAddr=str:54:52:c0:a8:c8:63
 OVEHOSTED_VM/emulatedMachine=str:pc
 OVEHOSTED_VM/vmBoot=str:disk
 OVEHOSTED_VM/vmVCpus=str:2
 OVEHOSTED_VM/ovfArchive=none:None
 OVEHOSTED_VM/vmCDRom=none:None
 OVEHOSTED_VM/automateVMShutdown=bool:True
-OVEHOSTED_VM/cloudinitInstanceDomainName=str:lago.local
+OVEHOSTED_VM/cloudinitInstanceDomainName=str:@DOMAIN@
 OVEHOSTED_VM/cloudinitExecuteEngineSetup=bool:True
-OVEHOSTED_VM/cloudinitInstanceHostName=str:hosted-engine.lago.local
+OVEHOSTED_VM/cloudinitInstanceHostName=str:@HOSTEDENGINE@.@DOMAIN@
 OVEHOSTED_VM/cloudinitVMStaticCIDR=str:@ADDR@/24
 OVEHOSTED_VM/cloudInitISO=str:generate
 OVEHOSTED_VM/cloudinitVMETCHOSTS=bool:True
