--- a/common/init-configs/1_hosted_engine_4.0_2_centos7_hosts.yml
+++ b/common/init-configs/1_hosted_engine_4.0_2_centos7_hosts.yml
@@ -3,6 +3,7 @@ domains:
     vm-provider: ssh
     vm-type: ovirt-engine
     distro: el7
+    service_provider: systemd
     nics:
       - net: __LAGO_NET__
         ip: 192.168.200.99
@@ -12,6 +13,9 @@ domains:
   __STORAGE__:
     memory: 1024
     distro: el7
+    vcpu: 1
+    cpu: 1
+    service_provider: systemd
     nics:
       - net: __LAGO_NET__
     disks:
@@ -54,6 +58,7 @@ domains:
     vm-type: ovirt-host
     distro: el7
     memory: 4720
+    service_provider: systemd
     nics:
       - net: __LAGO_NET__
     disks:
@@ -63,7 +68,7 @@ domains:
         dev: vda
         format: qcow2
       - name: tmp
-        size: 30G
+        size: 60G
         type: empty
         dev: sda
         format: raw
@@ -80,6 +85,7 @@ domains:
     vm-type: ovirt-host
     distro: el7
     memory: 4720
+    service_provider: systemd
     nics:
       - net: __LAGO_NET__
     disks:
@@ -109,3 +115,4 @@ nets:
       start: 100
       end: 254
     management: true
+    dns_domain_name: lago.local
