--- a/he-basic-suite-4.0/answers.conf.in
+++ b/he-basic-suite-4.0/answers.conf.in
@@ -3,15 +3,16 @@ OVEHOSTED_CORE/screenProceed=bool:True
 OVEHOSTED_CORE/deployProceed=bool:True
 OVEHOSTED_CORE/confirmSettings=bool:True
 OVEHOSTED_CORE/skipTTYCheck=bool:True
-OVEHOSTED_NETWORK/fqdn=str:hosted-engine.lago.local
+OVEHOSTED_NETWORK/fqdn=str:@HOSTEDENGINE@.@DOMAIN@
 OVEHOSTED_NETWORK/bridgeName=str:ovirtmgmt
 OVEHOSTED_NETWORK/bridgeIf=str:eth0
 OVEHOSTED_NETWORK/firewallManager=str:iptables
 OVEHOSTED_NETWORK/gateway=str:@GW@
+OVEHOSTED_NETWORK/host_name=str:@MYHOSTNAME@.@DOMAIN@
 OVEHOSTED_ENGINE/insecureSSL=none:None
 OVEHOSTED_ENGINE/clusterName=str:Default
 OVEHOSTED_ENGINE/adminPassword=str:@ENGINEPASS@
-OVEHOSTED_ENGINE/appHostName=str:lago-he-basic-suite-4-0-host0
+OVEHOSTED_ENGINE/appHostName=str:@MYHOSTNAME@
 OVEHOSTED_ENGINE/engineSetupTimeout=str:1200
 OVEHOSTED_STORAGE/storageDatacenterName=str:hosted_datacenter
 OVEHOSTED_STORAGE/domainType=str:nfs3
@@ -30,16 +31,16 @@ OVEHOSTED_STORAGE/storageDomainConnection=str:lago-he-basic-suite-4-0-storage:/e
 OVEHOSTED_STORAGE/iSCSIPortalUser=none:None
 OVEHOSTED_VDSM/consoleType=str:vnc
 OVEHOSTED_VM/vmMemSizeMB=int:3171
-OVEHOSTED_VM/vmMACAddr=str:00:16:3e:24:d3:63
+OVEHOSTED_VM/vmMACAddr=str:54:52:c0:a8:c8:63
 OVEHOSTED_VM/emulatedMachine=str:pc
 OVEHOSTED_VM/vmBoot=str:disk
 OVEHOSTED_VM/vmVCpus=str:2
 OVEHOSTED_VM/ovfArchive=str:@OVAIMAGE@
 OVEHOSTED_VM/vmCDRom=none:None
 OVEHOSTED_VM/automateVMShutdown=bool:True
-OVEHOSTED_VM/cloudinitInstanceDomainName=str:lago.local
+OVEHOSTED_VM/cloudinitInstanceDomainName=str:@DOMAIN@
 OVEHOSTED_VM/cloudinitExecuteEngineSetup=bool:True
-OVEHOSTED_VM/cloudinitInstanceHostName=str:hosted-engine.lago.local
+OVEHOSTED_VM/cloudinitInstanceHostName=str:@HOSTEDENGINE@.@DOMAIN@
 OVEHOSTED_VM/cloudinitVMStaticCIDR=str:@ADDR@/24
 OVEHOSTED_VM/cloudInitISO=str:generate
 OVEHOSTED_VM/cloudinitRootPwd=str:@VMPASS@
