Explictly use systemctl for services.
Since /sbin/service exists in EL7, Lago picks sysvinit interface for services.
It works, but there is no need to go through this indirection.
Instead, explictly set systemd as the service provider.

Change-Id: Ica7fac5777a009d7583eba55323da91a9c4f31b7
Signed-off-by: Yaniv Kaul <ykaul@redhat.com>

--- a/common/init-configs/1_centos6_engine_2_centos7_hosts.yml
+++ b/common/init-configs/1_centos6_engine_2_centos7_hosts.yml
@@ -19,6 +19,7 @@ domains:
   __STORAGE__:
     memory: 512
     cpus: 1
+    service_provider: systemd
     nics:
       - net: __LAGO_NET__
     disks:
@@ -53,6 +54,7 @@ domains:
   __HOST1__:
     vm-type: ovirt-host
     memory: 2047
+    service_provider: systemd
     nics:
       - net: __LAGO_NET__
     disks:
@@ -71,6 +73,7 @@ domains:
   __HOST0__:
     vm-type: ovirt-host
     memory: 2047
+    service_provider: systemd
     nics:
       - net: __LAGO_NET__
     disks:
