--- a/common/init-configs/1_centos7_engine_2_centos7_hosts.yml
+++ b/common/init-configs/1_centos7_engine_2_centos7_hosts.yml
@@ -2,6 +2,7 @@ domains:
   __ENGINE__:
     vm-type: ovirt-engine
     memory: 4096
+    service_provider: systemd
     nics:
       - net: __LAGO_NET__
     disks:
@@ -38,6 +39,7 @@ domains:
   __HOST0__:
     vm-type: ovirt-host
     memory: 2047
+    service_provider: systemd
     nics:
       - net: __LAGO_NET__
     disks:
@@ -56,6 +58,7 @@ domains:
   __HOST1__:
     vm-type: ovirt-host
     memory: 2047
+    service_provider: systemd
     nics:
       - net: __LAGO_NET__
     disks:
