--- a/common/init-configs/1_hosted_engine_4.0_2_centos7_hosts.yml
+++ b/common/init-configs/1_hosted_engine_4.0_2_centos7_hosts.yml
@@ -4,6 +4,7 @@ domains:
     vm-type: ovirt-engine
     distro: el7
     service_provider: systemd
+    ssh-password: 123456
     nics:
       - net: __LAGO_NET__
         ip: 192.168.200.99
