Fixes and changes to storage tests
- Use VM1 for cold merge tests. This also fixes live-merge.
- Master: run live and cold merge tests in parallel, to save time.
- Master: use a random host to create domains (NFS and iSCSI)
- Master: Reorder some tests, to make sure important (and sensitive)
tests are first.
- Master: Prepare for SD v4. Need to ensure it's possible with v3 SDK.
- Master: move to v4.1 DC level.
- Add some asserts to storage tests.
- Changed timeouts on merge tests. Not needed in 4.0, only on Master?

Change-Id: I311534f8cd2247a662cd1de34ecd9848fa7d2772
Signed-off-by: Yaniv Kaul <ykaul@redhat.com>

--- a/common/init-configs/1_centos7_engine_2_centos7_hosts.yml
+++ b/common/init-configs/1_centos7_engine_2_centos7_hosts.yml
@@ -40,6 +40,7 @@ domains:
   __HOST0__:
     vm-type: ovirt-host
     memory: 2047
+    root-password: 123456
     service_provider: systemd
     nics:
       - net: __LAGO_NET_MANAGEMENT__
@@ -62,6 +63,7 @@ domains:
   __HOST1__:
     vm-type: ovirt-host
     memory: 2047
+    root-password: 123456
     service_provider: systemd
     nics:
       - net: __LAGO_NET_MANAGEMENT__
