Fixes for 3.6 suite to work on CentOS 7.3
Similar fixes to reposync as Master and 4.0.
I had to install iptables manually as well.

Change-Id: Icbbbb24cb47fac4bfa5e164ffbc18ee7b3785ec7
Signed-off-by: Yaniv Kaul <ykaul@redhat.com>

--- a/common/init-configs/1_centos6_engine_2_centos7_hosts.yml
+++ b/common/init-configs/1_centos6_engine_2_centos7_hosts.yml
@@ -55,6 +55,7 @@ domains:
     vm-type: ovirt-host
     memory: 2047
     service_provider: systemd
+    root-password: 123456
     nics:
       - net: __LAGO_NET__
     disks:
@@ -74,6 +75,7 @@ domains:
     vm-type: ovirt-host
     memory: 2047
     service_provider: systemd
+    root-password: 123456
     nics:
       - net: __LAGO_NET__
     disks:
