Fix deps - CentOS 7.3 and friends
1. Switch the order between updates and base.
2. Update Gluster to 3.8
3. Add libcacard to base - suddenly it's needed there...
4. Set dns domain name to HE 3.6 - LDAP won't install without dns name in 7.3.
5. Add all relevant fixes to HE installation 
  - 'iptables' installation specifically.
  - move to use /root/multipath.txt that is on the storage server (like all other suites)

Change-Id: I273a770b7a8a1331692ff42b6633ed09ebd3a5ae
Signed-off-by: Yaniv Kaul <ykaul@redhat.com>

--- a/common/init-configs/1_hosted_engine_2_centos7_hosts.yml
+++ b/common/init-configs/1_hosted_engine_2_centos7_hosts.yml
@@ -10,7 +10,7 @@ domains:
       ovirt-engine-password: 123
 
   __STORAGE__:
-    memory: 1047
+    memory: 647
     distro: el7
     nics:
       - net: __LAGO_NET__
@@ -47,7 +47,7 @@ domains:
   __HOST1__:
     vm-type: ovirt-host
     distro: el7
-    memory: 4720
+    memory: 4520
     nics:
       - net: __LAGO_NET__
     disks:
@@ -73,7 +73,7 @@ domains:
   __HOST0__:
     vm-type: ovirt-host
     distro: el7
-    memory: 4720
+    memory: 4520
     nics:
       - net: __LAGO_NET__
     disks:
@@ -103,3 +103,4 @@ nets:
       start: 100
       end: 254
     management: true
+    dns_domain_name: lago.local
