accept defaults of aaa-ldap plugin installation
Motivation
No need to amend the answer file each time a new dialog is introduced,
just use the default answer supplied. Less maintenance.

Result
Setup takes the default answer and continues and will never stop to ask
for user intervention when there is a default set.

Change-Id: If46939cc1b7549b37382f98adf442fb1cbb5257f
Signed-off-by: Roy Golan <rgolan@redhat.com>
Signed-off-by: Eyal Edri <eedri@redhat.com>
Signed-off-by: Yedidyah Bar David <didi@redhat.com>

--- a/common/answer-files/aaa_ldap_4.0.conf
+++ b/common/answer-files/aaa_ldap_4.0.conf
@@ -10,3 +10,4 @@ OVAAALDAP_LDAP/password=str:123456
 OVAAALDAP_LDAP/toolEnable=bool:False
 OVAAALDAP_LDAP/configOverwrite=bool:True
 OVAAALDAP_LDAP/useVmSso=bool:False
+DIALOG/autoAcceptDefault=bool:True
