--- a/common/answer-files/aaa_ldap_master.conf
+++ b/common/answer-files/aaa_ldap_master.conf
@@ -11,3 +11,4 @@ OVAAALDAP_LDAP/toolEnable=bool:False
 OVAAALDAP_LDAP/configOverwrite=bool:True
 OVAAALDAP_LDAP/useVmSso=bool:False
 OVAAALDAP_LDAP/baseDN=str:dc=lago,dc=local
+DIALOG/autoAcceptDefault=bool:True
