--- a/common/answer-files/aaa_ldap_3.6.conf
+++ b/common/answer-files/aaa_ldap_3.6.conf
@@ -9,3 +9,4 @@ OVAAALDAP_LDAP/user=str:uid=user1,ou=People,dc=lago,dc=local
 OVAAALDAP_LDAP/password=str:123456
 OVAAALDAP_LDAP/toolEnable=bool:False
 OVAAALDAP_LDAP/configOverwrite=bool:True
+DIALOG/autoAcceptDefault=bool:True
