Use a placeholder for the template name
Each suite should have a file named 'templates' which
maps between the vm role and the required template name.
String substitution is done with sed in control.sh.

This change helps us to share the same init file between
suites that needs different templates.

Change-Id: I4dea71d1811b48c34613feac43d50fab3bf4dc97
Signed-off-by: gbenhaim <galbh2@gmail.com>

--- a/common/init-configs/1_centos7_engine_2_centos7_hosts.yml
+++ b/common/init-configs/1_centos7_engine_2_centos7_hosts.yml
@@ -7,7 +7,7 @@ domains:
       - net: __LAGO_NET_MANAGEMENT__
       - net: __LAGO_NET_STORAGE__
     disks:
-      - template_name: el7.3-base
+      - template_name: __ENGINE_TEMPLATE__
         type: template
         name: root
         dev: vda
@@ -42,7 +42,7 @@ domains:
       - net: __LAGO_NET_BONDING__
       - net: __LAGO_NET_STORAGE__
     disks:
-      - template_name: el7.3-base
+      - template_name: __HOSTS_TEMPLATE__
         type: template
         name: root
         dev: vda
@@ -65,7 +65,7 @@ domains:
       - net: __LAGO_NET_BONDING__
       - net: __LAGO_NET_STORAGE__
     disks:
-      - template_name: el7.3-base
+      - template_name: __HOSTS_TEMPLATE__
         type: template
         name: root
         dev: vda
