--- a/common/init-configs/1_centos6_engine_2_centos7_hosts.yml
+++ b/common/init-configs/1_centos6_engine_2_centos7_hosts.yml
@@ -5,7 +5,7 @@ domains:
     nics:
       - net: __LAGO_NET_MANAGEMENT__
     disks:
-      - template_name: el6-base
+      - template_name: __ENGINE_TEMPLATE__
         type: template
         name: root
         dev: vda
@@ -23,7 +23,7 @@ domains:
     nics:
       - net: __LAGO_NET_MANAGEMENT__
     disks:
-      - template_name: el7.3-base
+      - template_name: __HOSTS_TEMPLATE__
         type: template
         name: root
         dev: vda
@@ -53,7 +53,7 @@ domains:
     nics:
       - net: __LAGO_NET_MANAGEMENT__
     disks:
-      - template_name: el7.3-base
+      - template_name: __HOSTS_TEMPLATE__
         type: template
         name: root
         dev: vda
@@ -73,7 +73,7 @@ domains:
     nics:
       - net: __LAGO_NET_MANAGEMENT__
     disks:
-      - template_name: el7.3-base
+      - template_name: __HOSTS_TEMPLATE__
         type: template
         name: root
         dev: vda
